update css nsfw to red border on post; fix text wrapping on iphone x; fix mod/user tools line to not dupe

--- a/static/base.css
+++ b/static/base.css
@@ -419,7 +419,7 @@ blockquote {
 	margin: 0;
 }
 .user-options {
-	margin-left: 1rem;
+	margin-left: -10rem;
 }
 #user-recent {
 	margin-top: 3rem;
@@ -519,4 +519,8 @@ ul {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: 265px;
+}
+
+.nsfwpost {
+	border: 2px solid #982b2b!important;
 }
